can not send data to hiview after use MUSL
Signed-off-by: zhouhaifeng <kutcher.zhou@huawei.com>

--- a/interfaces/native/innerkits/BUILD.gn
+++ b/interfaces/native/innerkits/BUILD.gn
@@ -16,6 +16,10 @@ import("//build/ohos.gni")
 config("hisysevent_config") {
   visibility = [ "*:*" ]
 
+  if (use_musl) {
+    cflags_cc = [ "-DUSE_MUSL" ]
+  }
+
   include_dirs =
       [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/include" ]
 }
