add parameter check for interface
Signed-off-by: zhouhaifeng <kutcher.zhou@huawei.com>

--- a/interfaces/native/innerkits/BUILD.gn
+++ b/interfaces/native/innerkits/BUILD.gn
@@ -20,8 +20,10 @@ config("hisysevent_config") {
     cflags_cc = [ "-DUSE_MUSL" ]
   }
 
-  include_dirs =
-      [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/include" ]
+  include_dirs = [
+    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/include",
+    "//utils/native/base/include",
+  ]
 }
 
 ohos_shared_library("libhisysevent") {
