--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -19,12 +19,11 @@ config("sys_event_impl_config") {
 
   include_dirs = [
     ".",
-    "include"
+    "include",
   ]
 }
 
 ohos_source_set("sys_event_impl_client") {
-
   include_dirs = [
     "include",
     "//utils/native/base/include",
@@ -38,14 +37,12 @@ ohos_source_set("sys_event_impl_client") {
     "src/hisysevent_query_proxy.cpp",
   ]
 
-  public_configs = [
-    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config",
-  ]
+  public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]
 
   deps = [
     "$hiview_base:hiviewbase",
-    "//utils/native/base:utils",
     "$hiview_base/event_store:event_store_source",
+    "//utils/native/base:utils",
   ]
 
   external_deps = [
@@ -57,7 +54,6 @@ ohos_source_set("sys_event_impl_client") {
 }
 
 ohos_source_set("sys_event_service_gen_src_client") {
-
   include_dirs = [
     "include",
     "//utils/native/base/include",
@@ -78,8 +74,8 @@ ohos_source_set("sys_event_service_gen_src_client") {
 
   deps = [
     "$hiview_base:hiviewbase",
-    "//utils/native/base:utils",
     "$hiview_base/event_store:event_store_source",
+    "//utils/native/base:utils",
   ]
 
   external_deps = [
