hisysevent订阅和查询优化
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
@@ -25,10 +25,7 @@ config("hisyseventmanager_config") {
 }
 
 ohos_shared_library("libhisyseventmanager") {
-  sources = [
-    "hisysevent_manager.cpp",
-    "hisysevent_subscribe_callback_native.cpp",
-  ]
+  sources = [ "hisysevent_manager.cpp", ]
 
   output_name = "libhisyseventmanager"
   install_enable = true
