--- a/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
@@ -25,7 +25,7 @@ config("hisyseventmanager_config") {
 }
 
 ohos_shared_library("libhisyseventmanager") {
-  sources = [ "hisysevent_manager.cpp", ]
+  sources = [ "hisysevent_manager.cpp" ]
 
   output_name = "libhisyseventmanager"
   install_enable = true
