添加编译单元指定部件名
Signed-off-by: yudechen <chenyude@huawei.com>
Change-Id: Ic58e1db3ac659f26607ef6123490bb9aeb7a46d9

--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -45,6 +45,9 @@ ohos_source_set("sys_event_impl_client") {
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
   ]
+
+  part_name = "hisysevent_native"
+  subsystem_name = "hiviewdfx"
 }
 
 ohos_source_set("sys_event_service_gen_src_client") {
@@ -73,4 +76,7 @@ ohos_source_set("sys_event_service_gen_src_client") {
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
   ]
+
+  part_name = "hisysevent_native"
+  subsystem_name = "hiviewdfx"
 }
