--- a/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
@@ -19,7 +19,7 @@ config("hisyseventmanager_config") {
 
   include_dirs = [
     "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager/include",
-    "//utils/native/base/include",
+    "//third_party/bounds_checking_function/include",
     "include",
   ]
 }
@@ -41,8 +41,8 @@ ohos_shared_library("libhisyseventmanager") {
   deps = [
     "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_impl_client",
     "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_service_gen_src_client",
+    "//third_party/bounds_checking_function:libsec_shared",
     "//utils/native/base:utils",
-    "//utils/native/base:utilsecurec_shared",
   ]
 
   external_deps = [
