--- a/interfaces/js/kits/BUILD.gn
+++ b/interfaces/js/kits/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -11,17 +11,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-group("moduletest") {
-  testonly = true
-  deps = []
+import("//build/ohos.gni")
 
-  deps += [ "moduletest/common:moduletest" ]
-}
-
-group("unittest") {
-  testonly = true
+group("hisysevent_napi") {
   deps = []
   if (support_jsapi) {
-    deps += [ "unittest/common/napi:unittest" ]
+    deps += [
+      "//base/hiviewdfx/hisysevent/interfaces/js/kits/napi:hisysevent_napi",
+    ]
   }
 }
