--- a/test/unittest/common/napi/BUILD.gn
+++ b/test/unittest/common/napi/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -11,17 +11,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-group("moduletest") {
-  testonly = true
-  deps = []
+import("//build/test.gni")
 
-  deps += [ "moduletest/common:moduletest" ]
+module_output_path = "hisysevent_native/hisysevent_js_target"
+
+ohos_js_unittest("HiSysEventJsTest") {
+  module_out_path = module_output_path
+  hap_profile = "./config.json"
+  certificate_profile = "//test/developertest/signature/openharmony_sx.p7b"
 }
 
 group("unittest") {
   testonly = true
-  deps = []
-  if (support_jsapi) {
-    deps += [ "unittest/common/napi:unittest" ]
-  }
+  deps = [ ":HiSysEventJsTest" ]
 }
