Fix some issues
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/js/kits/napi/BUILD.gn
+++ b/interfaces/js/kits/napi/BUILD.gn
@@ -23,6 +23,7 @@ ohos_shared_library("hisysevent_napi") {
   configs = []
 
   sources = [
+    "./src/js_callback_manager.cpp",
     "./src/napi_hisysevent_adapter.cpp",
     "./src/napi_hisysevent_init.cpp",
     "./src/napi_hisysevent_js.cpp",
