add logic of defencing hisysevent writing strom.
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -32,6 +32,7 @@ ohos_shared_library("libhisysevent") {
     "hisysevent.cpp",
     "stringfilter.cpp",
     "transport.cpp",
+    "write_controller.cpp",
   ]
 
   output_name = "libhisysevent"
