--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -37,7 +37,6 @@ ohos_executable("hisysevent") {
     "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_impl_client",
     "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_service_gen_src_client",
     "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager",
-    "//third_party/cJSON:cjson_static",
     "//third_party/jsoncpp:jsoncpp",
     "//utils/native/base:utils",
   ]
@@ -51,6 +50,7 @@ ohos_executable("hisysevent") {
   ]
 
   sources = [
+    "flat_json_parser.cpp",
     "hisysevent_json_decorator.cpp",
     "hisysevent_tool.cpp",
     "hisysevent_tool_listener.cpp",
