--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -37,9 +37,8 @@ ohos_source_set("sys_event_impl_client") {
 
   public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]
 
-  deps = [ "//utils/native/base:utils" ]
-
   external_deps = [
+    "c_utils:utils",
     "hilog_native:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
@@ -68,9 +67,8 @@ ohos_source_set("sys_event_service_gen_src_client") {
     "src/sys_event_service_stub.cpp",
   ]
 
-  deps = [ "//utils/native/base:utils" ]
-
   external_deps = [
+    "c_utils:utils",
     "hilog_native:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
