--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -26,6 +26,7 @@ ohos_executable("hisysevent") {
     ".",
     "include",
     "//utils/system/safwk/native/include",
+    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
   ]
 
   public_configs = [
@@ -45,7 +46,6 @@ ohos_executable("hisysevent") {
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
     "ipc:ipc_core",
-    "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
   ]
 
