--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -26,7 +26,7 @@ ohos_executable("hisysevent") {
     ".",
     "include",
     "//utils/system/safwk/native/include",
-    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
+    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk",
   ]
 
   public_configs = [
@@ -46,7 +46,7 @@ ohos_executable("hisysevent") {
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
     "ipc:ipc_core",
-    "samgr_standard:samgr_proxy",
+    "samgr:samgr_proxy",
   ]
 
   sources = [
