add hisysevent C API
Signed-off-by: zhouhaifeng <kutcher.zhou@huawei.com>

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -30,6 +30,7 @@ ohos_shared_library("libhisysevent") {
 
   sources = [
     "hisysevent.cpp",
+    "hisysevent_c.cpp",
     "stringfilter.cpp",
     "transport.cpp",
     "write_controller.cpp",
