add c inner_api of write
Signed-off-by: lyj_love_code <liangyujian2@huawei.com>

--- a/test/moduletest/common/BUILD.gn
+++ b/test/moduletest/common/BUILD.gn
@@ -18,7 +18,7 @@ module_output_path = "hisysevent_native/hisysevent_native"
 config("hisysevent_native_test_config") {
   visibility = [ ":*" ]
 
-  include_dirs = [ "." ]
+  include_dirs = [ "include" ]
 }
 
 ohos_moduletest("HiSysEventNativeTest") {
@@ -52,9 +52,31 @@ ohos_moduletest("HiSysEventNativeTest") {
   }
 }
 
+ohos_moduletest("HiSysEventCTest") {
+  module_out_path = module_output_path
+
+  sources = [ "hisysevent_c_test.cpp" ]
+
+  configs = [ ":hisysevent_native_test_config" ]
+
+  if (build_public_version) {
+    deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
+  } else {
+    deps = [ "//third_party/bounds_checking_function:libsec_static" ]
+  }
+
+  external_deps = [
+    "hisysevent_native:libhisysevent",
+    "hiviewdfx_hilog_native:libhilog",
+  ]
+}
+
 group("moduletest") {
   testonly = true
   deps = []
 
-  deps += [ ":HiSysEventNativeTest" ]
+  deps += [
+    ":HiSysEventCTest",
+    ":HiSysEventNativeTest",
+  ]
 }
