--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -35,11 +35,14 @@ ohos_source_set("sys_event_impl_client") {
     "src/hisysevent_query_proxy.cpp",
   ]
 
+  deps = [ "//third_party/jsoncpp:jsoncpp" ]
+
   public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]
 
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
+    "hisysevent_native:libhisysevent",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
@@ -67,9 +70,12 @@ ohos_source_set("sys_event_service_gen_src_client") {
     "src/sys_event_service_stub.cpp",
   ]
 
+  deps = [ "//third_party/jsoncpp:jsoncpp" ]
+
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
+    "hisysevent_native:libhisysevent",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
