--- a/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -20,12 +20,17 @@ config("hisyseventmanager_config") {
   include_dirs = [
     "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager/include",
     "//third_party/bounds_checking_function/include",
+    "//third_party/jsoncpp/include/json",
     "include",
   ]
 }
 
 ohos_shared_library("libhisyseventmanager") {
-  sources = [ "hisysevent_manager.cpp" ]
+  sources = [
+    "hisysevent_base_manager.cpp",
+    "hisysevent_manager.cpp",
+    "hisysevent_record.cpp",
+  ]
 
   output_name = "libhisyseventmanager"
   install_enable = true
@@ -44,9 +49,12 @@ ohos_shared_library("libhisyseventmanager") {
     "//third_party/bounds_checking_function:libsec_shared",
   ]
 
+  public_deps = [ "//third_party/jsoncpp:jsoncpp" ]
+
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
+    "hisysevent_native:libhisysevent",
     "hitrace_native:libhitrace",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
