冗余依赖整改
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -26,7 +26,7 @@ config("hisysevent_config") {
 ohos_shared_library("libhisysevent") {
   configs = [ ":hisysevent_config" ]
 
-  public_configs = [ ":hisysevent_config" ]
+  all_dependent_configs = [ ":hisysevent_config" ]
 
   sources = [
     "hisysevent.cpp",
