--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -20,6 +20,7 @@ config("sys_event_impl_config") {
   include_dirs = [
     ".",
     "include",
+    "//foundation/systemabilitymgr/safwk/services/safwk/include",
   ]
 }
 
@@ -37,14 +38,14 @@ ohos_source_set("sys_event_impl_client") {
 
   deps = [ "//third_party/jsoncpp:jsoncpp" ]
 
+  all_dependent_configs = [ ":sys_event_impl_config" ]
+
   public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]
 
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
-    "hisysevent_native:libhisysevent",
     "ipc:ipc_core",
-    "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
 
@@ -70,14 +71,12 @@ ohos_source_set("sys_event_service_gen_src_client") {
     "src/sys_event_service_stub.cpp",
   ]
 
-  deps = [ "//third_party/jsoncpp:jsoncpp" ]
+  all_dependent_configs = [ ":sys_event_impl_config" ]
 
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
-    "hisysevent_native:libhisysevent",
     "ipc:ipc_core",
-    "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
 
