--- a/test/unittest/common/napi/BUILD.gn
+++ b/test/unittest/common/napi/BUILD.gn
@@ -18,8 +18,7 @@ module_output_path = "hisysevent_native/hisysevent_js_target"
 ohos_js_unittest("HiSysEventJsTest") {
   module_out_path = module_output_path
   hap_profile = "./config.json"
-  certificate_profile =
-      "//test/testfwk/developer_test/signature/openharmony_sx.p7b"
+  certificate_profile = "//base/hiviewdfx/hisysevent/test/unittest/common/napi/signature/ohos_provision_release.p7b"
 }
 
 group("unittest") {
