修复分布式组网后调用hiSysEvent的query接口查询系统事件返回-17的错误码的bug
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -61,6 +61,7 @@ ohos_source_set("sys_event_service_gen_src_client") {
   ]
 
   sources = [
+    "src/ash_mem_utils.cpp",
     "src/query_sys_event_callback_proxy.cpp",
     "src/query_sys_event_callback_stub.cpp",
     "src/sys_event_callback_proxy.cpp",
