--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -41,6 +41,7 @@ ohos_executable("hisysevent") {
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
+    "hisysevent_native:libhisysevent",
     "hisysevent_native:libhisyseventmanager",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
