--- a/test/moduletest/common/BUILD.gn
+++ b/test/moduletest/common/BUILD.gn
@@ -21,6 +21,37 @@ config("hisysevent_native_test_config") {
   include_dirs = [ "include" ]
 }
 
+ohos_moduletest("HiSysEventAdapterNativeTest") {
+  module_out_path = module_output_path
+
+  sources = [ "hisysevent_adapter_native_test.cpp" ]
+
+  configs = [ ":hisysevent_native_test_config" ]
+
+  deps = [
+    "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_impl_client",
+    "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_service_gen_src_client",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  if (is_standard_system) {
+    external_deps = [
+      "c_utils:utils",
+      "hisysevent_native:libhisysevent",
+      "hisysevent_native:libhisyseventmanager",
+      "hiviewdfx_hilog_native:libhilog",
+    ]
+  } else {
+    external_deps = [
+      "c_utils:utils",
+      "hilog:libhilog",
+      "hisysevent_native:libhisysevent",
+      "hisysevent_native:libhisyseventmanager",
+    ]
+    cflags_cc = [ "-D__HIVIEW_HAVE_HITRACE__" ]
+  }
+}
+
 ohos_moduletest("HiSysEventNativeTest") {
   module_out_path = module_output_path
 
@@ -103,6 +134,7 @@ group("moduletest") {
   deps = []
 
   deps += [
+    ":HiSysEventAdapterNativeTest",
     ":HiSysEventCTest",
     ":HiSysEventManagerCTest",
     ":HiSysEventNativeTest",
