fixed f485071 from https://gitee.com/lyj_love_code/hiviewdfx_hisysevent/pulls/244 add fuzz test case for hisysevent_manager
Signed-off-by: lyj_love_code <liangyujian2@huawei.com>

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -25,3 +25,9 @@ group("unittest") {
     deps += [ "unittest/common/napi:unittest" ]
   }
 }
+
+group("fuzztest") {
+  testonly = true
+  deps =
+      [ "fuzztest/common/hisyseventmanager_fuzzer:HiSysEventManagerFuzzTest" ]
+}
