--- a/frameworks/native/test/BUILD.gn
+++ b/frameworks/native/test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -11,26 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-group("moduletest") {
-  testonly = true
-  deps = []
-
-  deps += [ "moduletest/common:moduletest" ]
-}
-
 group("unittest") {
   testonly = true
-  deps = []
-  if (support_jsapi) {
-    deps += [
-      "unittest/common/napi:unittest",
-      "//base/hiviewdfx/hisysevent/frameworks/native:unittest",
-    ]
-  }
-}
-
-group("fuzztest") {
-  testonly = true
-  deps =
-      [ "fuzztest/common/hisyseventmanager_fuzzer:HiSysEventManagerFuzzTest" ]
+  deps = [ "unittest/common:unittest" ]
 }
