--- a/test/unittest/common/permission/BUILD.gn
+++ b/test/unittest/common/permission/BUILD.gn
@@ -15,8 +15,8 @@ import("//build/test.gni")
 
 module_output_path = "hisysevent_native/hisysevent_js_target"
 
-ohos_js_unittest("HiSysEventJsTest") {
+ohos_js_unittest("HiSysEventPermissionJsTest") {
   module_out_path = module_output_path
   hap_profile = "./config.json"
-  certificate_profile = "./signature/hiSysEventJsUnitTest.p7b"
+  certificate_profile = "./signature/hiSysEventPermissionJsTest.p7b"
 }
