Feature: add sa, hdi, chipsetsdk type info
1) 为sa，hdi库增加shlib_type类型
2) 为chipsetsdk库增加innerapi_tags类型
3) innerapi_tags支持ndk

Signed-off-by: handyohos <zhangxiaotian@huawei.com>
Change-Id: I54f4bba571dfbf5f8a0b25fa589298edfa3e4c20

#I6DSU6

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -42,6 +42,11 @@ ohos_shared_library("libhisysevent") {
   part_name = "hisysevent_native"
   subsystem_name = "hiviewdfx"
 
+  innerapi_tags = [
+    "chipsetsdk",
+    "platformsdk",
+  ]
+
   external_deps = [
     "hilog_native:libhilog",
     "hitrace_native:libhitracechain",
