--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -19,6 +19,7 @@ config("hisysevent_config") {
 
   include_dirs = [
     "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
+    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/encode/include",
     "//third_party/bounds_checking_function/include",
   ]
 }
@@ -31,7 +32,7 @@ ohos_shared_library("libhisysevent") {
   sources = [
     "hisysevent.cpp",
     "hisysevent_c.cpp",
-    "stringfilter.cpp",
+    "inner_writer.cpp",
     "transport.cpp",
     "write_controller.cpp",
   ]
@@ -52,5 +53,8 @@ ohos_shared_library("libhisysevent") {
     "hitrace_native:libhitracechain",
   ]
 
-  deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
+  deps = [
+    "./encode:hisysevent_encode",
+    "//third_party/bounds_checking_function:libsec_shared",
+  ]
 }
