--- a/interfaces/native/innerkits/hisysevent/encode/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/encode/BUILD.gn
@@ -11,7 +11,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//base/hiviewdfx/hiview/hiview.gni")
 import("//build/ohos.gni")
 
 config("hisysevent_encoded_config") {
@@ -37,6 +36,6 @@ ohos_source_set("hisysevent_encoded") {
     "hilog_native:libhilog",
   ]
 
-  part_name = "hiview"
+  part_name = "hisysevent_native"
   subsystem_name = "hiviewdfx"
 }
