add innertag on hiviewdfx_hisysevent
Signed-off-by: chengjinsong2 <chengjinsong2@huawei.com>

--- a/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
@@ -39,6 +39,7 @@ ohos_shared_library("libhisyseventmanager") {
   output_name = "libhisyseventmanager"
   install_enable = true
 
+  innerapi_tags = [ "platformsdk" ]
   part_name = "hisysevent_native"
   subsystem_name = "hiviewdfx"
 
