--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -20,6 +20,7 @@ config("sys_event_impl_config") {
     ".",
     "include",
     "//foundation/systemabilitymgr/safwk/services/safwk/include",
+    "//foundation/ability/ability_runtime/interfaces/kits/native/appkit/ability_runtime/context",
   ]
 }
 
@@ -33,19 +34,26 @@ ohos_source_set("sys_event_impl_client") {
     "src/hisysevent_delegate.cpp",
     "src/hisysevent_listener_proxy.cpp",
     "src/hisysevent_query_proxy.cpp",
+    "src/file_util.cpp",
   ]
 
-  deps = [ "//third_party/jsoncpp:jsoncpp" ]
+  deps = [
+    "//third_party/jsoncpp:jsoncpp",
+    "//foundation/ability/ability_runtime/frameworks/native/appkit:app_context",
+  ]
 
   all_dependent_configs = [ ":sys_event_impl_config" ]
 
   public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]
 
   external_deps = [
+    "bundle_framework:appexecfwk_base",
+    "bundle_framework:appexecfwk_core",
     "c_utils:utils",
     "hilog_native:libhilog",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
+    "storage_service:storage_manager_acl",
   ]
 
   part_name = "hisysevent_native"
