fixed a1b00d1 from https://gitee.com/honghecun/hiviewdfx_hisysevent/pulls/318 adapt write interfaces for both plain text and raw data
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent/encode/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/encode/BUILD.gn
@@ -16,7 +16,10 @@ import("//build/ohos.gni")
 config("hisysevent_encoded_config") {
   visibility = [ "*:*" ]
 
-  include_dirs = [ "include" ]
+  include_dirs = [
+    "../include",
+    "./include",
+  ]
 }
 
 ohos_source_set("hisysevent_encoded") {
