--- a/test/moduletest/common/BUILD.gn
+++ b/test/moduletest/common/BUILD.gn
@@ -130,6 +130,61 @@ ohos_moduletest("HiSysEventManagerCTest") {
   ]
 }
 
+ohos_moduletest("HiSysEventDelayTest") {
+  module_out_path = module_output_path
+
+  include_dirs =
+      [ "//base/hiviewdfx/hisysevent/adapter/native/idl/include/ret_code.h" ]
+
+  sources = [ "hisysevent_delay_test.cpp" ]
+
+  configs = [ ":hisysevent_native_test_config" ]
+
+  deps = [
+    "//base/hiviewdfx/hisysevent/frameworks/native/util:hisysevent_util",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  if (build_public_version) {
+    deps += [ "//third_party/bounds_checking_function:libsec_shared" ]
+  } else {
+    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+  }
+
+  external_deps = [
+    "hisysevent_native:libhisysevent",
+    "hiviewdfx_hilog_native:libhilog",
+  ]
+}
+
+ohos_moduletest("HiSysEventWroteResultCheckTest") {
+  module_out_path = module_output_path
+
+  include_dirs =
+      [ "//base/hiviewdfx/hisysevent/adapter/native/idl/include/ret_code.h" ]
+
+  sources = [ "hisysevent_wrote_result_check_test.cpp" ]
+
+  configs = [ ":hisysevent_native_test_config" ]
+
+  deps = [
+    "//base/hiviewdfx/hisysevent/frameworks/native/util:hisysevent_util",
+    "//third_party/googletest:gtest_main",
+  ]
+
+  if (build_public_version) {
+    deps += [ "//third_party/bounds_checking_function:libsec_shared" ]
+  } else {
+    deps += [ "//third_party/bounds_checking_function:libsec_static" ]
+  }
+
+  external_deps = [
+    "hisysevent_native:libhisysevent",
+    "hisysevent_native:libhisyseventmanager",
+    "hiviewdfx_hilog_native:libhilog",
+  ]
+}
+
 group("moduletest") {
   testonly = true
   deps = []
@@ -137,7 +192,9 @@ group("moduletest") {
   deps += [
     ":HiSysEventAdapterNativeTest",
     ":HiSysEventCTest",
+    ":HiSysEventDelayTest",
     ":HiSysEventManagerCTest",
     ":HiSysEventNativeTest",
+    ":HiSysEventWroteResultCheckTest",
   ]
 }
