--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -31,6 +31,7 @@ ohos_shared_library("libhisysevent") {
   sources = [
     "hisysevent.cpp",
     "hisysevent_c.cpp",
+    "inner_writer.cpp",
     "stringfilter.cpp",
     "transport.cpp",
     "write_controller.cpp",
