--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -36,9 +36,7 @@ ohos_source_set("sys_event_impl_client") {
     "src/hisysevent_query_proxy.cpp",
   ]
 
-  deps = [
-    "//third_party/jsoncpp:jsoncpp",
-  ]
+  deps = [ "//third_party/jsoncpp:jsoncpp" ]
 
   all_dependent_configs = [ ":sys_event_impl_config" ]
 
