--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -42,13 +42,20 @@ ohos_source_set("sys_event_impl_client") {
 
   public_configs = [ "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:hisyseventmanager_config" ]
 
+  defines = []
+
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
-    "storage_service:storage_manager_acl",
   ]
+
+  if (!defined(global_parts_info) ||
+      defined(global_parts_info.filemanagement_storage_service)) {
+    external_deps += [ "storage_service:storage_manager_acl" ]
+    defines += [ "STORAGE_SERVICE_ENABLE" ]
+  }
 
   part_name = "hisysevent_native"
   subsystem_name = "hiviewdfx"
