modify some dependency configuration in BUILD.gn
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/frameworks/native/c_wrapper/BUILD.gn
+++ b/frameworks/native/c_wrapper/BUILD.gn
@@ -27,11 +27,14 @@ ohos_shared_library("hisysevent_c_wrapper") {
     "./source/hisysevent_rust_querier.cpp",
   ]
 
+  deps = [
+    "../../../interfaces/native/innerkits/hisysevent:libhisysevent",
+    "../../../interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager",
+  ]
+
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
-    "hisysevent_native:libhisysevent",
-    "hisysevent_native:libhisyseventmanager",
   ]
 
   output_extension = "so"
