--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -32,6 +32,8 @@ ohos_executable("hisysevent") {
       [ "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_impl_config" ]
 
   deps = [
+    "../../interfaces/native/innerkits/hisysevent:libhisysevent",
+    "../../interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager",
     "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_impl_client",
     "//base/hiviewdfx/hisysevent/adapter/native/idl:sys_event_service_gen_src_client",
     "//third_party/jsoncpp:jsoncpp",
@@ -40,8 +42,6 @@ ohos_executable("hisysevent") {
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
-    "hisysevent_native:libhisysevent",
-    "hisysevent_native:libhisyseventmanager",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
   ]
