--- a/adapter/native/idl/BUILD.gn
+++ b/adapter/native/idl/BUILD.gn
@@ -20,6 +20,7 @@ config("sys_event_impl_config") {
     ".",
     "include",
     "//foundation/systemabilitymgr/safwk/services/safwk/include",
+    "//third_party/jsoncpp/include",
   ]
 }
 
@@ -47,7 +48,7 @@ ohos_source_set("sys_event_impl_client") {
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
-    "ipc:ipc_core",
+    "ipc:ipc_single",
     "samgr:samgr_proxy",
   ]
 
@@ -86,7 +87,7 @@ ohos_source_set("sys_event_service_gen_src_client") {
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
-    "ipc:ipc_core",
+    "ipc:ipc_single",
     "samgr:samgr_proxy",
   ]
 
