--- a/frameworks/native/test/unittest/common/BUILD.gn
+++ b/frameworks/native/test/unittest/common/BUILD.gn
@@ -21,7 +21,10 @@ group("unittest") {
 }
 
 config("unittest_config") {
-  include_dirs = [ "//base/hiviewdfx/hisysevent/frameworks/native/include" ]
+  include_dirs = [
+    "//base/hiviewdfx/hisysevent/frameworks/native/include",
+    "//third_party/jsoncpp/include",
+  ]
 
   cflags_cc = [ "-D__UNITTEST__" ]
 }
@@ -42,14 +45,17 @@ ohos_unittest("HiSysEventToolUnitTest") {
 
   cflags_cc = [ "-DTEST_LOCAL_SRC" ]
 
-  deps = [ "//third_party/googletest:gtest_main" ]
+  deps = [
+    "//third_party/googletest:gtest_main",
+    "//third_party/jsoncpp:jsoncpp",
+  ]
 
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
     "hisysevent_native:libhisysevent",
     "hisysevent_native:libhisyseventmanager",
-    "ipc:ipc_core",
+    "ipc:ipc_single",
     "samgr:samgr_proxy",
   ]
 }
