--- a/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent_manager/BUILD.gn
@@ -18,8 +18,10 @@ config("hisyseventmanager_config") {
 
   include_dirs = [
     "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager/include",
+    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
+    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/encode/include",
     "//third_party/bounds_checking_function/include",
-    "//third_party/jsoncpp/include/json",
+    "//third_party/jsoncpp/include",
     "include",
   ]
 }
@@ -55,16 +57,16 @@ ohos_shared_library("libhisyseventmanager") {
     "../../../../adapter/native/idl:sys_event_impl_client",
     "../../../../adapter/native/idl:sys_event_service_gen_src_client",
     "../../../../frameworks/native/util:hisysevent_util",
+    "../hisysevent:libhisysevent",
+    "//third_party/jsoncpp:jsoncpp",
   ]
-
-  public_deps = [ "//third_party/jsoncpp:jsoncpp" ]
 
   version_script = "libhisyseventmanager.map"
 
   external_deps = [
     "c_utils:utils",
     "hilog_native:libhilog",
-    "ipc:ipc_core",
+    "ipc:ipc_single",
     "samgr:samgr_proxy",
   ]
 }
