--- a/test/moduletest/common/BUILD.gn
+++ b/test/moduletest/common/BUILD.gn
@@ -41,6 +41,7 @@ ohos_moduletest("HiSysEventAdapterNativeTest") {
       "hisysevent_native:libhisysevent",
       "hisysevent_native:libhisyseventmanager",
       "hiviewdfx_hilog_native:libhilog",
+      "ipc:ipc_single",
     ]
   } else {
     external_deps = [
@@ -48,6 +49,7 @@ ohos_moduletest("HiSysEventAdapterNativeTest") {
       "hilog:libhilog",
       "hisysevent_native:libhisysevent",
       "hisysevent_native:libhisyseventmanager",
+      "ipc:ipc_single",
     ]
     cflags_cc = [ "-D__HIVIEW_HAVE_HITRACE__" ]
   }
