add old api interfaces into symbol map.
Signed-off-by: xuyong <xuyong59@huawei.com>

--- a/interfaces/native/innerkits/hisysevent/BUILD.gn
+++ b/interfaces/native/innerkits/hisysevent/BUILD.gn
@@ -50,6 +50,8 @@ ohos_shared_library("libhisysevent") {
     "platformsdk",
   ]
 
+  version_script = "libhisysevent.map"
+
   external_deps = [
     "hilog_native:libhilog",
     "hitrace_native:libhitracechain",
